[workspace]
resolver = "2"
members = [
    "components/codec",
    "components/transport",
    "data-node",
]

[workspace.dependencies]
async-channel = { version = "1.8" }
local-sync = { version = "0.0" }
byteorder = "1"
bytes = "1"
core_affinity = "0.7"
crc = "3.0"
monoio = { version = "0.0", features = ["splice"] }
num_cpus = "1"
thiserror = "1.0"
crossbeam = "0.8"
clap = { version = "4.0", features = ["derive"] }
num_enum = "0.5"

# Logging
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.7"
slog-term = "2.9"